--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
 /*home page start*/
 nav a{
   text-decoration: none;
-  color: inherit;
+  color: white;
+
 }
 nav img.icon{
     width: 150px;
 }
-
+nav {
+  background-color: #0d1773;
+}
 nav span p.title-chinese{
     width: 100%;
-
     font-size: 30px;
     vertical-align: middle;
     text-overflow: ellipsis;
@@ -17,9 +19,14 @@ nav span p.title-chinese{
     padding-left: 0px;
     padding-right: 30px;
     padding-bottom: 0px;
+    color: #ffffff;
 }
-#nav-link {
+a.nav-link {
   font-size: 30px;
+  color: #ffffff;
+}
+span.navbar-toggler-icon{
+  background-color: white;
 }
 
 .nav-item{
@@ -250,9 +257,8 @@ width: 90%
     padding: 20px; 
 }
 #contact-us h2{
-  position: absolute;
+  position: relative;
   font-size: 85px;
-  font-weight: 1000;
   font-weight: bold;
   color: rgb(214, 177, 13);
   line-height: 1000px;
