--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ p,a ,input,label,textarea,span,ul,li{
 #intro .carousel-caption {
     position: absolute; /* 使標題在覆蓋層之上 */
     z-index: 2; /* 確保標題在覆蓋層之上 */
-    top: 0%;
+    top: 680px;
 }
 
 
