--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,12 @@ p,a ,input,label,textarea,span,ul,li{
 #intro .carousel-caption {
     position: absolute; /* 使標題在覆蓋層之上 */
     z-index: 2; /* 確保標題在覆蓋層之上 */
-    top: 0%;
+    top: 680px;
 }
-
-
+button.carousel-control-next, button.carousel-control-prev{
+  width: 7%;
+  background-color: rgba(128, 128, 128, 0.726);
+}
 #intro h2{
     font-size: 45px;
     font-weight: 500;
